<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:title="@string/general_preferences" android:key="odk_preferences" android:summary="@string/admin_access_settings">
        <intent android:targetPackage="org.odk.collect.android" android:action="android.intent.action.VIEW" android:targetClass="org.odk.collect.android.preferences.PreferencesActivity">
            <extra android:name="adminMode" android:value="true"/>
        </intent>
    </Preference>
    <org.odk.collect.android.preferences.PasswordDialogPreference android:id="@+id/admin_pw" android:title="Admin Password" android:key="admin_pw" android:defaultValue="" android:dialogTitle="Change Admin Password"/>
    <PreferenceCategory android:title="@string/user_access_main_menu">
        <CheckBoxPreference android:id="@+id/edit_saved" android:title="@string/review_data_button" android:key="edit_saved" android:defaultValue="true"/>
        <CheckBoxPreference android:id="@+id/send_finalized" android:title="@string/send_data_button" android:key="send_finalized" android:defaultValue="true"/>
        <CheckBoxPreference android:id="@+id/get_blank" android:title="@string/get_forms" android:key="get_blank" android:defaultValue="true"/>
        <CheckBoxPreference android:id="@+id/delete_saved" android:title="@string/manage_files" android:key="delete_saved" android:defaultValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/user_access_preferences">
        <CheckBoxPreference android:id="@+id/change_server" android:title="@string/change_server" android:key="change_server" android:defaultValue="true"/>
        <CheckBoxPreference android:id="@+id/change_username" android:title="@string/change_username_default" android:key="change_username" android:defaultValue="true"/>
        <CheckBoxPreference android:id="@+id/change_password" android:title="@string/password" android:key="change_password" android:defaultValue="true"/>
        <CheckBoxPreference android:id="@+id/change_google_account" android:title="@string/selected_google_account_text" android:key="change_google_account" android:defaultValue="true"/>
        <CheckBoxPreference android:id="@+id/change_font_size" android:title="@string/font_size" android:key="change_font_size" android:defaultValue="true"/>
        <CheckBoxPreference android:id="@+id/default_to_finalized" android:title="@string/default_completed" android:key="default_to_finalized" android:defaultValue="true"/>
        <CheckBoxPreference android:id="@+id/show_splash_screen" android:title="@string/show_splash" android:key="show_splash_screen" android:defaultValue="true"/>
        <CheckBoxPreference android:id="@+id/select_splash_screen" android:title="@string/splash_path" android:key="select_splash_screen" android:defaultValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/user_access_form_entry">
        <CheckBoxPreference android:id="@+id/access_settings" android:title="@string/general_preferences" android:key="access_settings" android:summary="@string/found_in_menu" android:defaultValue="true"/>
        <CheckBoxPreference android:id="@+id/change_language" android:title="@string/change_language" android:key="change_language" android:summary="@string/found_in_menu" android:defaultValue="true"/>
        <CheckBoxPreference android:id="@+id/jump_to" android:title="@string/view_hierarchy" android:key="jump_to" android:summary="@string/found_in_menu" android:defaultValue="true"/>
        <CheckBoxPreference android:id="@+id/save_mid" android:title="@string/save_mid" android:key="save_mid" android:summary="@string/save_mid_summary" android:defaultValue="true"/>
        <CheckBoxPreference android:id="@+id/save_as" android:title="@string/save_as" android:key="save_as" android:summary="@string/save_as_summary" android:defaultValue="true"/>
        <CheckBoxPreference android:id="@+id/mark_as_finalized" android:title="@string/mark_as_finished" android:key="mark_as_finalized" android:summary="@string/mark_as_finalized_summary" android:defaultValue="true"/>
    </PreferenceCategory>
</PreferenceScreen>
