<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:id="@+id/pathtext" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="4dp"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/buttonholder" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:textSize="16sp" android:id="@+id/jumpPreviousButton" android:padding="12dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/jump_to_previous" android:layout_weight="1"/>
        <Button android:textSize="16sp" android:id="@+id/jumpBeginningButton" android:padding="12dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/jump_to_beginning" android:layout_weight="1"/>
        <Button android:textSize="16sp" android:id="@+id/jumpEndButton" android:padding="12dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/jump_to_end" android:layout_weight="1"/>
    </LinearLayout>
    <ListView android:id="@android:id/list" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@+id/buttonholder" android:layout_below="@+id/pathtext"/>
    <TextView android:textSize="21sp" android:gravity="center" android:id="@android:id/empty" android:background="@drawable/white" android:padding="20dp" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/no_items_display"/>
</RelativeLayout>
