<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@+id/mainlayout" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.google.android.maps.MapView android:id="@+id/mapview" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent" android:apiKey="017Xo9E6R7WmcCITvo-lU2V0ERblKPqCcguwxSQ"/>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@+id/location_buttons" android:background="#bf000000" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:paddingTop="2dp" android:paddingBottom="2dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/show_location" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/go_to_location" android:layout_weight="1"/>
            <Button android:id="@+id/accept_location" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/accept_location" android:layout_weight="1"/>
            <Button android:id="@+id/cancel_location" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/cancel" android:layout_weight="1"/>
        </LinearLayout>
        <TextView android:textColor="#ffffff" android:id="@+id/location_status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/please_wait_long"/>
    </LinearLayout>
</RelativeLayout>
