<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_alignParentTop="true">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@+id/buttonholder">
        <TextView android:textSize="14sp" android:id="@+id/status_text" android:background="#dddddd" android:padding="5dp" android:paddingTop="0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/form_scan_starting"/>
        <ListView android:id="@android:id/list" android:layout_width="match_parent" android:layout_height="match_parent"/>
        <TextView android:textSize="21sp" android:gravity="center" android:id="@android:id/empty" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/no_items_display"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@+id/buttonholder" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:textSize="16sp" android:id="@+id/delete_button" android:padding="12dp" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/delete_file" android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
