<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@android:color/primary_text_dark" android:id="@+id/pwd_label" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:text="@string/enter_new_password" android:layout_alignParentTop="true"/>
    <EditText android:id="@+id/pwd_field" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="5dp" android:layout_marginRight="10dp" android:layout_below="@+id/pwd_label" android:inputType="textPassword"/>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@android:color/primary_text_dark" android:id="@+id/verify_label" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:text="@string/verify_new_password" android:layout_below="@+id/pwd_field"/>
    <EditText android:id="@+id/verify_field" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="5dp" android:layout_marginRight="10dp" android:layout_below="@+id/verify_label" android:inputType="textPassword"/>
    <LinearLayout android:orientation="horizontal" android:background="@android:color/darker_gray" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_below="@+id/verify_field">
        <Button android:id="@+id/positive_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="2dp" android:layout_marginTop="5dp" android:text="@string/ok" android:layout_weight="1"/>
        <Button android:id="@+id/negative_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_marginRight="2dp" android:text="@string/cancel" android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
