<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <LinearLayout android:orientation="vertical" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <View android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"/>
        <TextView android:textSize="21sp" android:textStyle="bold" android:gravity="center" android:layout_gravity="center" android:id="@+id/description" android:paddingTop="10dp" android:paddingBottom="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:lineSpacingMultiplier="1.2"/>
        <TextView android:textSize="21sp" android:gravity="left" android:id="@+id/save_form_as" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save_form_as" android:lineSpacingMultiplier="1.2"/>
        <EditText android:textSize="21sp" android:id="@+id/save_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="text"/>
        <CheckBox android:textSize="21sp" android:layout_gravity="left" android:id="@+id/mark_finished" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="@string/mark_finished"/>
        <Button android:textSize="21sp" android:layout_gravity="center_horizontal" android:id="@+id/save_exit_button" android:padding="20dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/quit_entry"/>
        <View android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"/>
    </LinearLayout>
</ScrollView>
